@@startuml "test"

interface IProblemHandler{
    +handleProblem(problem: string): void
}

class FileAndFolderProblemHandler {
    -CreateProblemMd(description: string): void
    -createProblemFolder(): void
}
class ConsoleProblemHandler

IProblemHandler <|.... FileAndFolderProblemHandler
IProblemHandler <|.. ConsoleProblemHandler

note left of IProblemHandler::handleProblem{
    IProblemHandler is an interface
    FileAndFolderProblemHandler and ConsoleProblemHandler are classes
    }

@@enduml